--- a/MyToolTrackerClient/package.json
+++ b/MyToolTrackerClient/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.0.0",
     "@mui/x-date-pickers": "^7.0.0",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.10",
+    "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +26,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
