Change text in Sidebar list items

--- a/MyToolTrackerClient/dockerfile
+++ b/MyToolTrackerClient/dockerfile
@@ -1,13 +1,19 @@
-FROM node:20-alpine
-
+# Build Stage
+FROM node:18-alpine AS BUILD_IMAGE
 WORKDIR /app
-
-COPY package.json .
-RUN npm install
+COPY package*.json ./
+RUN npm ci
 COPY . .
+RUN npm run build
 
+
+# Production Stage
+FROM node:18-alpine AS PRODUCTION_STAGE
+WORKDIR /app
+COPY --from=BUILD_IMAGE /app/package*.json ./
+COPY --from=BUILD_IMAGE /app/.next ./.next
+COPY --from=BUILD_IMAGE /app/public ./public
+COPY --from=BUILD_IMAGE /app/node_modules ./node_modules
+ENV NODE_ENV=production
 EXPOSE 3000
-
-CMD ["npm", "run", "dev"]
-
-
+CMD ["npm", "start"]
