--- a/MyToolTrackerClient/package.json
+++ b/MyToolTrackerClient/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
